# lock-fund

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: action.rs  cipher.rs  command.rs  config_file.rs  instructions.rs  main.rs  utils.rs
cli/src/instructions/: create_config.rs  mod.rs
programs/lock-fund/: Cargo.toml
programs/lock-fund/src/: constants.rs  errors.rs  event.rs  lib.rs
programs/lock-fund/src/instructions/: create_config.rs  create_escrow_lock.rs  mod.rs  transfer_sol.rs  transfer_token.rs
programs/lock-fund/src/state/: config_account.rs  escrow_lock_fund.rs  mod.rs
scripts/: createEscrow.ts  setup.ts  transferToken.ts
scripts/keys/: approver.json  recipient.json
tests/: lock-fund.ts
ts-script/: transferSol.ts  transferToken.ts
ts-script/keys/: authority.json
