[workspace]
members = [ "cli",
    "programs/*",
    "cli"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
solana-rpc-client = { version = "1.18.21" }
spl-associated-token-account = "6.0.0"
solana-sdk = "2.1.7"
curve25519-dalek = { version = "3.2.1" }
zeroize = { version = "1.3", default-features = false }
