[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
lock-fund = { path = "../programs/lock-fund"}
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true }
solana-rpc-client = { workspace = true }
anyhow = "1.0.94"
curve25519-dalek = { workspace = true }
zeroize = { workspace = true }
aes-gcm = "0.10.3"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
sha2 = "0.10.8"
serde_derive = "1.0.215"
console = "0.15.10"
dirs-next = "2.0.0"
bs58 = "0.5.1"
